<resources>
    <string name="app_name">ProjektApp</string>
    <string name="restaurants">Restaurants</string>
    <string name="map">Map</string>

    <string name="restaurant_name">Restaurant name</string>
    <string name="meal_price">meal price: %.2f€</string>
    <string name="meal_surcharge">meal surcharge: %.2f€</string>
    <string name="restaurant_capacity">%s/%d</string>

    <string name="restaurant_photo_description">Photo of the restaurant or it\'s food</string>
    <string name="restaurant_capacity_description">Last recorded number of people in restaurant</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="detect_capacity">Detect capacity</string>
    <string name="detect_capacity_description">Detect capacity for %s</string>
    <string name="mqtt">MQTT</string>
    <string name="mqtt_description">Actions related to MQTT</string>
    <string name="camera">Camera</string>
    <string name="simulate_data">Simulate data</string>
    <string name="gallery">Gallery</string>
    <string name="back">Back</string>
    <string name="img">Img</string>
    <string name="price_change">Price change</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="restaurant_searchbar_hint">Search for restaurants</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload_new">New</string>
    <string name="get_amount_in_image">Get the amount of people in the image</string>
    <string name="simulate">Simulate</string>
    <string name="data_simulator">Data simulator</string>
    <string name="timer">Set simulation timer:</string>
    <string name="interval">Interval</string>
    <string name="duration">Duration</string>
    <string name="minutes">minutes</string>
    <string name="camera_fragment">CAMERA</string>
    <string name="timer1">Total Time: 00:00</string>
    <string name="timer2">Interval Time: 00:00</string>
    <string name="hh_mm">hh:mm</string>


</resources>