<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/popUpFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_medium"
    android:background="@drawable/rounded_corners">

    <ImageView
        android:id="@+id/ivPeople"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_circle_nodes"
        app:tint="@color/black"/>


    <TextView
        android:id="@+id/tvMQTT"
        style="@style/LabelMediumBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivPeople"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/mqtt" />

    <TextView
        android:id="@+id/tvMQTTDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_extra_large"
        android:layout_marginRight="@dimen/margin_extra_large"
        app:layout_constraintTop_toBottomOf="@id/tvMQTT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="wrap"
        android:text="@string/mqtt_description"
        android:ellipsize="end"
        android:maxLines="2"
        android:gravity="center" />

    <Button
        android:id="@+id/btnEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/tvMQTTDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableLeft="@drawable/ic_money_trend"
        android:drawableTint="@color/white"
        android:text="@string/price_change" />

    <Button
        android:id="@+id/btnSubscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/btnEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableLeft="@drawable/ic_simulate_data"
        android:drawableTint="@color/white"
        android:text="@string/subscribe" />

</androidx.constraintlayout.widget.ConstraintLayout>
