<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimulateFragment">

    <TextView
        android:id="@+id/timerTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/timer1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPredictedAmount" />

    <TextView
        android:id="@+id/timerInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/timer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerTotal" />

    <TextView
        android:id="@+id/lblPredictedAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/data_simulator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simRestaurantName" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/ic_baseline_arrow_back"
        app:layout_constraintEnd_toStartOf="@+id/simRestaurantName"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSimulate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginBottom="16dp"
        android:text="@string/simulate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgPicked"
        android:layout_width="350dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/imgPicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <EditText
        android:id="@+id/inputSimulationTimer"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border_background"
        android:fontFamily="@font/mona_sans"
        android:hint="@string/hh_mm"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputSimulationInterval"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border_background"
        android:fontFamily="@font/mona_sans"
        android:hint="@string/hh_mm"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/simRestaurantName"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_extra_large"
        android:ellipsize="end"
        android:fontFamily="@font/soliden"
        android:maxLines="2"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/ic_simulate_timer"
        app:layout_constraintEnd_toEndOf="@+id/inputSimulationTimer"
        app:layout_constraintTop_toTopOf="@+id/inputSimulationTimer"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageViewInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/ic_simulate_timer"
        app:layout_constraintEnd_toEndOf="@+id/inputSimulationInterval"
        app:layout_constraintTop_toTopOf="@+id/inputSimulationInterval"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/horizontalLineDuration"
        android:layout_width="0.8dp"
        android:layout_height="35dp"
        android:background="#000000"
        android:layout_marginRight="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/inputSimulationTimer"
        app:layout_constraintEnd_toEndOf="@+id/inputSimulationTimer" />

    <View
        android:id="@+id/horizontalInterval"
        android:layout_width="0.8dp"
        android:layout_height="35dp"
        android:background="#000000"
        android:layout_marginRight="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/inputSimulationInterval"
        app:layout_constraintEnd_toEndOf="@+id/inputSimulationInterval" />

    <TextView
        android:id="@+id/durationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mona_sans"
        android:text="@string/duration"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputSimulationTimer"
        app:layout_constraintStart_toStartOf="@+id/inputSimulationTimer" />

    <TextView
        android:id="@+id/intervalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mona_sans"
        android:text="@string/interval"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputSimulationInterval"
        app:layout_constraintStart_toStartOf="@+id/inputSimulationInterval" />

</androidx.constraintlayout.widget.ConstraintLayout>